resolved misalignment in mobile layout

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -48,6 +48,7 @@
 
   .about-container {
     grid-template-columns: 1fr;
+    padding: 0 !important;
     .right-about {
       grid-template-columns: 1fr;
       padding-top: 2.5rem;
@@ -88,6 +89,9 @@
       margin-left: 0;
       margin-top: 2.5rem;
       padding-bottom: 6rem;
+      .input-control {
+        margin-right: 0;
+      }
       .submit-btn {
         justify-content: center;
       }
